# multiple_errors

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: collect.rs  fail_all.rs  lib.rs  return_multiple_errors.rs  testing_prelude.rs
