[package]
name = "multiple_errors"
version = "1.1.0"
edition = "2021"
authors = ["Dmitrii Aleksandrov <adk2300@gmail.com>"]
documentation = "https://docs.rs/multiple_errors/"
description = "Propagate multiple errors instead of just the first one"
license = "MIT OR Apache-2.0"
repository = "https://github.com/expurple/multiple_errors"
categories = ["rust-patterns"]
keywords = ["error", "error-handling", "macro", "multiple", "propagate"]
readme = "README.md"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_code = "forbid"
